# factorio-blueprint-generator

./: .gitignore  Makefile  README.md  design.md  main.py  models.py  pyproject.toml  test_main.py
.github/workflows/: ci.yml  python-package.yml
