[project]
name = "factorio-blueprint-generator"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "factorio-draftsman",
    "jupyter>=1.1.1",
]

[tool.uv.sources]
factorio-draftsman = { git = "https://github.com/redruin1/factorio-draftsman" }

[dependency-groups]
dev = [
    "pytest>=8.4.1",
]
